src/styles/Signup.css
/* styles/Register.css */

.container {
  /* Make the container a flex container */
  display: flex;
}

.image-container {
  flex: 0 0 50%;
  background: url("../assets/signupVector.png") center center/cover no-repeat;
  background-size: 100%; /* Set the background size to cover */
  background-color: lightcyan;
  border-radius: 50px;
}

.register-container {
  flex: 0 0 50%;
  height: 100%; /* Adjust height to take up full viewport */
}

.signup-form {
  margin: 0 auto;
  padding: 20px;
  width: 600px;
  background-color: #fff;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.form-group {
  width: 100%;
  margin-bottom: 20px;
  margin-top: 10px;
}

label {
  display: block;
  margin-bottom: 8px;
  font-size: 14px;
}

input {
  width: 100%;
  padding: 12px;
  border: 1px solid #ddd; /* Lighter border color */
  border-radius: 5px;
  box-sizing: border-box;
  margin-top: 5px;
  font-size: 16px;
  color: #333; /* Darker text color */
  background-color: #fff; /* Lighter input background color */
  transition: border-color 0.3s;
}

input:focus {
  border-color: #4caf50;
}

h2 {
  text-align: center;
  margin-bottom: 50px;
  margin-top: -30px;
}

.register-button {
  background-color: #4caf50;
  color: #fff;
  padding: 12px 20px;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 16px;
  transition: background-color 0.3s;
}

.register-button:hover {
  background-color: #45a049;
}

